--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -1,28 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+<html>
+    <head>
+        <title>advice generator</title>
+        <link rel="stylesheet" href="advice.css">
+       <link rel="stylesheet" href = "https://fonts.googleapis.com/css?family=Manrope"/>
+    </head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Advice generator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Advice #<!-- Advice ID goes here -->
-
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <body>
+        <div class="cover">
+            <div class="box" id="box1">
+                <div class="circle" ><img class="dic" id="circ" src="./images/icon-dice.svg"/></div>
+                <div class="fest">Advice #00wale</div>
+                <div class="maintext">"Click the die below to view another quote, a new one loads every two seconds"</div>
+                <div class="line"><img class="lin" src="./images/pattern-divider-desktop.svg"/></div>
+                
+            </div>
+        </div>
+    </body>
+    <script  src="advice.js"></script>
 </html>
